--- a/templates/login.html
+++ b/templates/login.html
@@ -2,24 +2,44 @@
 <html>
 <head>
     <title>Login</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+
 </head>
 <body>
-    <h1>Login</h1>
-    {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            <ul>
-                {% for message in messages %}
-                    <li>{{ message }}</li>
-                {% endfor %}
-            </ul>
-        {% endif %}
-    {% endwith %}
-    <form method="POST" action="/login">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required><br>
+<header class="header">
+        <div class="logo">
+            <a href="/">
+                <img src="{{ url_for('static', filename='books.png') }}" alt="Logo" class="logo">
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required><br>
+            </a>
+        </div>
+        <div class="button-container">
+            <a href="/login" class="button">Log In</a>
+            <a href="/signup" class="button">Sign Up</a>
+        </div>
+</header>
+    <img src="{{ url_for('static', filename='bb.png') }}" alt="Logo" class="bg-image" style="width:100%;height:calc(100vh - 60px); position:relative;">
+
+
+    <form method="POST" action="/login" class="form-wrapper">
+        <h1 style="margin-bottom:20px;">Login</h1>
+
+       <div class="input-wrapper">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required><br>
+       </div>
+        <div class="input-wrapper">
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required><br>
+        </div>
+                {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                    {% for message in messages %}
+                        <p style="width:200px; color:red;">{{ message }}</p>
+                    {% endfor %}
+            {% endif %}
+        {% endwith %}
+
 
         <button type="submit">Login</button>
     </form>
