--- a/templates/main.html
+++ b/templates/main.html
@@ -2,38 +2,39 @@
 <html>
 <head>
     <title>Main Page</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+
     <style>
-        /* Add your CSS styles for the page layout here */
-        .background {
-            /* Add background styles */
-        }
 
-        .logo {
-            /* Add styles for the logo */
-        }
-
-        .button-container {
-            /* Add styles for the button container */
-        }
-
-        .button {
-            /* Add styles for the buttons */
-        }
     </style>
+
 </head>
 <body>
-    <div class="background">
-        <!-- Add your background image or styling here -->
-    </div>
-    <div class="content">
+<header class="header">
         <div class="logo">
-            <!-- Add your logo or image here -->
-            <img src="logo.png" alt="Logo" width="100" height="100">
+            <a href="/">
+                <img src="{{ url_for('static', filename='books.png') }}" alt="Logo" class="logo">
+
+            </a>
         </div>
         <div class="button-container">
             <a href="/login" class="button">Log In</a>
             <a href="/signup" class="button">Sign Up</a>
         </div>
+</header>
+
+
+    <img src="{{ url_for('static', filename='bb.png') }}" alt="Logo" class="bg-image" style="width:100%;height:calc(100vh - 60px); position:relative;">
+
+
+
+<div class="hero">
+    <img src="{{ url_for('static', filename='book.png') }}" alt="hero image" class="hero-img">
+    <div class="about-wrapper">
+        <h2 class="about-title">About The Web</h2>
+        <p class="about-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
     </div>
+</div>
+
 </body>
 </html>
