--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,23 +2,44 @@
 <html>
 <head>
     <title>Signup</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+
 </head>
 <body>
+<header class="header">
+        <div class="logo">
+            <a href="/">
+                <img src="{{ url_for('static', filename='books.png') }}" alt="Logo" class="logo">
+
+            </a>
+        </div>
+        <div class="button-container">
+            <a href="/login" class="button">Log In</a>
+            <a href="/signup" class="button">Sign Up</a>
+        </div>
+</header>
+    <img src="{{ url_for('static', filename='bb.png') }}" alt="Logo" class="bg-image" style="width:100%;height:calc(100vh - 60px); position:relative;">
+
+
+    <form method="POST" action="/signup" class="form-wrapper">
     <h1>Signup</h1>
-    {% with messages = get_flashed_messages() %}
+
+        <div class="input-wrapper">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required>
+        </div>
+        <div class="input-wrapper">
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+        </div>
+            {% with messages = get_flashed_messages() %}
     {% if messages %}
-    <ul class="messages">
         {% for message in messages %}
-        <li>{{ message }}</li>
+        <p style="width:200px; color:red;">{{ message }}</p>
         {% endfor %}
-    </ul>
     {% endif %}
     {% endwith %}
-    <form method="POST" action="/signup">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
+
         <button type="submit">Signup</button>
     </form>
 </body>
